--- a/templates/frontend/partials/footer.html
+++ b/templates/frontend/partials/footer.html
@@ -1,34 +1,5 @@
 {% load static %}
 {% load currency_filters %}
-        <!-- Newsletter Section Start -->
-    <section class="newsletter-section section-b-space">
-        <div class="container-fluid-lg">
-            <div class="newsletter-box newsletter-box-2">
-                <div class="newsletter-contain py-5">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-xxl-4 col-lg-5 col-md-7 col-sm-9 offset-xxl-2 offset-md-1">
-                                <div class="newsletter-detail">
-                                    <h2>Join our newsletter and get...</h2>
-                                    <h5>₦20 discount for your first order</h5>
-                                    <div class="input-box">
-                                        <input type="email" name="email" class="form-control" id="exampleFormControlInput1"
-                                            placeholder="Enter Your Email">
-                                        <i class="fa-solid fa-envelope arrow"></i>
-                                        <button class="sub-btn  btn-animation">
-                                            <span class="d-sm-block d-none">Subscribe</span>
-                                            <i class="fa-solid fa-arrow-right icon"></i>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Newsletter Section End -->
 
 
     <footer class="section-t-space">
@@ -132,14 +103,17 @@
                         <div class="footer-contain">
                             <ul>
                                 <li>
-                                    <a href="{% url 'home' %}" class="text-content">Home</a>
+                                    <a href="{% url 'privacy-policy' %}" class="text-content">Privacy Policy</a>
                                 </li>
                                 <li>
-                                    <a href="{% url 'shop' %}" class="text-content">Shop</a>
+                                    <a href="{% url 'terms-and-conditions' %}" class="text-content">Terms and Conditions</a>
                                 </li>
 
                                 <li>
-                                    <a href="{% url 'home' %}" class="text-content">Become a vendor</a>
+                                    <a href="{% url 'returns-and-refund' %}" class="text-content">Return and Refund Policy</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'onboard-vendor' %}" class="text-content">Become a Vendor</a>
                                 </li>
                                 <li>
                                     <a href="{% url 'contact' %}" class="text-content">Contact Us</a>
@@ -155,24 +129,31 @@
 
                         <div class="footer-contain">
                             <ul>
+                                {% if user.user_type == "Vendor" %}
                                 <li>
-                                    <a href="order-success.html" class="text-content">Your Order</a>
+                                    <a href="{% url 'vendor-dashboard-home' %}" class="text-content">Dashboard</a>
+
                                 </li>
                                 <li>
-                                    <a href="user-dashboard.html" class="text-content">Your Account</a>
+                                    <a href="{% url 'vendor-dashboard-orders' %}" class="text-content">Orders</a>
                                 </li>
+                                {% else %}
+
+                                    <li>
+                                        <a href="{% url 'dashboard' %}" class="text-content">Dashboard</a>
+                                    </li>
+
+                                    <li>
+                                        <a href="{% url 'orders' %}" class="text-content">Orders</a>
+                                    </li>
+                                {% endif %}
+
+
                                 <li>
-                                    <a href="order-tracking.html" class="text-content">Track Order</a>
+                                    <a href="{% url 'wishlist' %}" class="text-content">Your Wishlist</a>
                                 </li>
-                                <li>
-                                    <a href="wishlist.html" class="text-content">Your Wishlist</a>
-                                </li>
-                                <li>
-                                    <a href="search.html" class="text-content">Search</a>
-                                </li>
-                                <li>
-                                    <a href="faq.html" class="text-content">FAQ</a>
-                                </li>
+
+
                             </ul>
                         </div>
                     </div>
@@ -229,7 +210,7 @@
 
             <div class="sub-footer section-small-space">
                 <div class="reserve">
-                    <h6 class="text-content">©2022 OyaBuyNow All rights reserved</h6>
+                    <h6 class="text-content">©2025 OyaBuyNow All rights reserved</h6>
                 </div>
 
                 <div class="payment">
