--- a/templates/frontend/onboard-vendor.html
+++ b/templates/frontend/onboard-vendor.html
@@ -114,8 +114,7 @@
                 <form class="vendor-form"
                       x-data="{ submitting: false }"
                       @submit="submitting = true"
-                      method="POST" enctype="multipart/form-data"
-                >
+                      method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
 
                     <div class="row g-3">
@@ -173,12 +172,10 @@
                             <input type="file" class="form-control" id="business_logo" name="business_logo" required>
                         </div>
 
-
                         <div class="col-md-6">
                             <label for="id_card" class="form-label">Valid ID (National ID, Driver’s License, or Passport)</label>
                             <input type="file" class="form-control" id="id_card" name="id_card" required>
                         </div>
-
 
                         <div class="col-md-6">
                             <label for="bank" class="form-label">Bank</label>
@@ -189,13 +186,11 @@
 
                         <input type="hidden" name="bank_name" id="bank_name">
 
-
                         <div class="col-md-6">
                             <label for="account_number" class="form-label">Bank Account Number</label>
                             <input type="text" class="form-control" id="account_number" name="account_number" required maxlength="10">
                             <small id="account_name" class="text-success mt-2 d-block"></small>
                         </div>
-
 
                         <div class="col-md-12">
                             <label for="business_address" class="form-label">Business Address</label>
@@ -228,11 +223,15 @@
                         </div>
                         {% endif %}
 
-                        <div class="col-12">
+                        <!-- Terms and Vendor Policy Agreement -->
+                        <div class="col-12 mt-3">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="agree" name="agree" required>
-                                <label class="form-check-label" for="agree">
-                                    I agree to the <a href="">Terms & Conditions</a>.
+                                <input class="form-check-input" type="checkbox" id="agree_policy" name="agree_policy" required>
+                                <label class="form-check-label" for="agree_policy">
+                                    I have read and agree to the
+                                    <a href="{% url 'vendor-onboarding-policy' %}" target="_blank" class="text-primary text-decoration-none">
+                                        Vendor Onboarding Policy
+                                    </a>.
                                 </label>
                             </div>
                         </div>
@@ -240,8 +239,7 @@
                         <div class="col-12 mt-4">
                             <button type="submit" class="btn btn-animation w-100 justify-content-center text-center"
                                 :disabled="submitting"
-                                x-text="submitting ? 'Submitting...' : 'Submit'"
-                            >
+                                x-text="submitting ? 'Submitting...' : 'Submit'">
                                 Submit
                             </button>
                         </div>
@@ -255,7 +253,6 @@
         </div>
     </div>
 </section>
-<!-- Vendor Registration Form End -->
 {% else %}
 <section class="vendor-register section-b-space">
     <div class="container-fluid-lg">
@@ -272,39 +269,23 @@
 </section>
 {% endif %}
 
-
-
-
 <script>
-
-    function passwordForm() {
-        return {
-            fields: {
-                password: '',
-                confirmPassword: ''
-            },
-            errors: {
-                password: '',
-                confirmPassword: ''
-            },
-            validate(field) {
-                // Reset errors
-                this.errors.password = '';
-                this.errors.confirmPassword = '';
-
-                // Validate password strength (optional)
-                if (field === 'password' && this.fields.password.length < 8) {
-                    this.errors.password = 'Password must be at least 8 characters long.';
-                }
-
-                // Check if passwords match
-                if (this.fields.confirmPassword && this.fields.password !== this.fields.confirmPassword) {
-                    this.errors.confirmPassword = 'Passwords do not match.';
-                }
+function passwordForm() {
+    return {
+        fields: { password: '', confirmPassword: '' },
+        errors: { password: '', confirmPassword: '' },
+        validate(field) {
+            this.errors.password = '';
+            this.errors.confirmPassword = '';
+            if (field === 'password' && this.fields.password.length < 8) {
+                this.errors.password = 'Password must be at least 8 characters long.';
+            }
+            if (this.fields.confirmPassword && this.fields.password !== this.fields.confirmPassword) {
+                this.errors.confirmPassword = 'Passwords do not match.';
             }
         }
     }
-
+}
 </script>
 
 {% endblock %}
